fix: 🐛 overwrite ieBanner inline display:none on ie11

--- a/src/resources/styles/_ieBanner.scss
+++ b/src/resources/styles/_ieBanner.scss
@@ -1,6 +1,6 @@
-.ieBanner {
+.ieBanner[styles] {
 	.ie & {
-		display: block;
+		display: block !important;
 	}
 	display: none;
 	background: $tertiary;
